# azure-iot-sdk-c

./: .gitignore  .gitmodules  CMakeLists.txt  helgrind_output.txt  test-file.txt  valgrind.txt
build_all/packaging/windows/: Microsoft.Azure.IoTHub.IoTHubClient.nuspec
doc/: connection-and-messaging-reliability.md
edge-e2e/: build.cmd
edge-e2e/wrapper/: CMakeLists.txt  Main.cpp
edge-e2e/wrapper/glue/: DeviceGlue.cpp  DeviceGlue.h  GlueUtils.cpp  GlueUtils.h  InternalGlue.cpp  InternalGlue.h  ModuleGlue.cpp  ModuleGlue.h  RegistryGlue.cpp  RegistryGlue.h  ServiceGlue.cpp  ServiceGlue.h  WrapperGlue.cpp  WrapperGlue.h
iothub_client/: CMakeLists.txt
iothub_client/inc/: iothub.h  iothub_client.h  iothub_client_core.h  iothub_client_core_ll.h  iothub_client_create.h  iothub_client_ll.h  iothub_client_options_ex.h  iothub_client_version.h  iothub_device_client.h  iothub_device_client_ll.h  iothub_message.h  iothub_module_client.h  iothub_module_client_ll.h  iothub_transport_ll.h
iothub_client/inc/internal/: iothub_client_authorization.h  iothub_message_internal.h  iothubtransport_amqp_device.h  iothubtransport_amqp_telemetry_messenger.h  uamqp_messaging.h
iothub_client/min_e2e_tests/: CMakeLists.txt
iothub_client/min_e2e_tests/common_test_files/: min_e2e_test_common.c  min_e2e_test_common.h
iothub_client/min_e2e_tests/iothub_mqtt_e2etests/: CMakeLists.txt  iothub_mqtt_e2etests.c  main.c
iothub_client/samples/: CMakeLists.txt
iothub_client/samples/iotedge_downstream_device_sample/: iotedge_downstream_device_sample.c
iothub_client/samples/iothub_client_sample_upload_to_blob_mb/: iothub_client_sample_upload_to_blob_mb.c
iothub_client/samples/iothub_ll_client_sample_upload_to_blob/: CMakeLists.txt  iothub_ll_client_sample_upload_to_blob.c
iothub_client/samples/iothub_ll_client_sample_upload_to_blob_mb/: CMakeLists.txt  iothub_ll_client_sample_upload_to_blob_mb.c
iothub_client/samples/iothub_ll_telemetry_sample/: iothub_ll_telemetry_sample.c
iothub_client/samples/iothub_ll_telemetry_sample/linux/: CMakeLists.txt
iothub_client/src/: iothub_client_authorization.c  iothub_client_core_ll.c  iothub_device_client_ll.c  iothub_message.c  iothubtransport_amqp_common.c  iothubtransport_amqp_device.c  iothubtransport_amqp_telemetry_messenger.c  iothubtransport_amqp_twin_messenger.c  iothubtransport_mqtt_common.c  uamqp_messaging.c
iothub_client/tests/: CMakeLists.txt  global_valgrind_suppression.supp
iothub_client/tests/common_e2e/: iothubclient_common_e2e.c
iothub_client/tests/iothub_client_retry_control_ut/: iothub_client_retry_control_ut.c
iothub_client/tests/iothubclient_diagnostic_ut/: iothubclient_diagnostic_ut.c
iothub_client/tests/iothubclient_ll_ut/: iothubclient_ll_ut.c
iothub_client/tests/iothubclient_ut/: iothubclient_ut.c
iothub_client/tests/iothubclientcore_ll_ut/: iothubclientcore_ll_ut.c
iothub_client/tests/iothubclientcore_ut/: iothubclientcore_ut.c
iothub_client/tests/iothubdeviceclient_ll_ut/: iothubdeviceclient_ll_ut.c
iothub_client/tests/iothubdeviceclient_ut/: iothubdeviceclient_ut.c
iothub_client/tests/iothubmoduleclient_ll_ut/: iothubmoduleclient_ll_ut.c
iothub_client/tests/iothubmoduleclient_ut/: iothubmoduleclient_ut.c
iothub_client/tests/iothubtr_amqp_tel_msgr_ut/: iothubtr_amqp_tel_msgr_ut.c
iothub_client/tests/iothubtransport_amqp_cbs_auth_ut/: iothubtransport_amqp_cbs_auth_ut.c
iothub_client/tests/iothubtransport_amqp_common_ut/: iothubtransport_amqp_common_ut.c
iothub_client/tests/iothubtransport_ut/: iothubtransport_ut.c
iothub_service_client/tests/: CMakeLists.txt
jenkins/: linux_c_option_test.sh
provisioning_client/: CMakeLists.txt
provisioning_client/adapters/: hsm_client_data.h  hsm_client_key.h  hsm_client_riot.h  hsm_client_tpm.h
provisioning_client/devdoc/: secure_custom_hsm.md
provisioning_client/min_e2e_tests/: CMakeLists.txt
provisioning_client/min_e2e_tests/prov_x509_e2etests/: CMakeLists.txt  main.c  prov_x509_e2etests.c
provisioning_client/src/: iothub_auth_client.c  prov_auth_client.c  prov_device_ll_client.c  prov_transport_amqp_client.c  prov_transport_amqp_common.c  prov_transport_amqp_ws_client.c  prov_transport_http_client.c  prov_transport_mqtt_client.c  prov_transport_mqtt_common.c  prov_transport_mqtt_ws_client.c
serializer/: CMakeLists.txt
serializer/devdoc/: serializer_apis.md
serializer/inc/: agenttypesystem.h  codefirst.h  schema.h  schemaserializer.h  serializer.h
serializer/src/: agenttypesystem.c  codefirst.c  commanddecoder.c  schema.c  schemaserializer.c  serializer.def
serializer/tests/: CMakeLists.txt
testtools/UART_interface/: input.sh
tools/node_test_runner/: node_prov_service.js  node_test_runner.js  package-lock.json
tools/python_tool/: CreateProc.py  CreateProc2.py  classes.py  conditions.py  digitaltwin1.py  direct_eventhub_api.py  functions.py  lists.py  loops.ps1  math1.py  override_iot_test_environment.py  prov_test_runner.py  run_test.py  stringFormat.py  stringOps.py  vars1.py
(+81 files in other folders)
